# OrthosCPlusPlusGravPhysics

./: CMakeLists.txt  README
CPPfiles/: .PhysicsWorld.cpp.swp  .PointObject.h.swp  CMakeLists.txt  CMakeLists.txt~  ObjectSystem.cpp  ObjectSystem.h  ObjectSystem.h~  PhysicsWorld.cpp  PhysicsWorld.h  PointObject.cpp  PointObject.h  PointObject.h~
Demo/: CMakeLists.txt  Makefile  cmake_install.cmake
Haskell/c_interface/: mutateGenome.c
Haskell/haskell/: MutateGenome.hs
Hello/: CMakeLists.txt  Makefile  cmake_install.cmake
Main/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  main.cpp~
Main/Dispose/: main.c
Main/Hello/: Makefile
Main/Main/: Makefile  cmake_install.cmake  main
SomeFunctions/: CMakeLists.txt  Makefile  SomeFunctionsPRIVATE.c  SomeFunctionsPRIVATE.h  SomeFunctionsPUBLIC.c  SomeFunctionsPUBLIC.h  cmake_install.cmake  relay.c  relay.h
easyLinuxBuild/: easyLinuxBuild.bash  main
